This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
11/19/24: Added property to make Focus Ramper blank beam at end of ramp.

11/19/24: Fixed crash going to first low dose area on JEOL.

11/17/24: Added support for electron dose modulator from IDES and made the
relevant setting part of Low Dose parameters.

11/17/24: Added script command to collect output from RunProcess directly into
a variable.

11/16/24: Fixed crash if running multigrid to save maps and "Skip saving" is
checked.

11/11/24: Added option to multigrid to run a script after each grid map is
done.

11/10/24: Fixed installer copying Microsoft dlls on XP (In 4.1).

11/4/24: Added ability to open secondary log windows; added button to
multigrid dialog to open logs from runs on a grid and fixed Clear button.

11/1/24: Added script command to clear non-persistent variables.

10/31/24: SEM_4-1-18
10/31/24: Error details are now included in the popup message about an error
calling a JEOL scope function (In 4.1).

10/30/24: Fixed going back into Low Dose after Realign to Item , which crashed
when accounting for some offsets (In 4.1).

10/30/24: Automated the Step To and Adjust IS procedure to use
cross-correlation or hole centering, and made it able to take preview montages
so it can work closer to the Record mag.

10/30/24: Added routine and script command to find one hole and optionally
center on it in an image with one or a few holes.

10/30/24: Made the routine that automatically measures View shift offset able
to align in two mag steps when the mag range exceeds 20-fold.

10/30/24: Added script command and menu item to take a 3x3 Prescan montage
with Preview in Low Dose, without setting up montaging.

10/30/24: Added ability to take montages with Preview in Low Dose.
